--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
     "eslint": "^8",
