--- a/web/package.json
+++ b/web/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^8",
