--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,14 @@
     "@mui/material": "^5.15.17",
     "@mui/x-date-pickers": "^7.3.2",
     "@pbe/react-yandex-maps": "^1.2.5",
+    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
